テスト準備

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -3,3 +3,6 @@ port = :8080
 
 [db]
 dsn = root:password@tcp(go_sample)/go_sample?charset=utf8mb4&parseTime=True&loc=Local
+
+[testdb]
+dsn = root:password@tcp(go_sample_test)/go_sample_test?charset=utf8mb4&parseTime=True&loc=Local
